--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   #overlayMessage {
     position: absolute; inset: 0; display: none; align-items: center; justify-content: center;
     font-size: 20px; font-weight: 600; color: #c00; background: rgba(255,255,255,0.7);
-    pointer-events: none;
+    pointer-events: auto;
   }
   /* Aside is a 3-row grid so the 3rd row (the list) can scroll independently */
   aside {
@@ -360,8 +360,14 @@ class HexBoard {
     const overlay = document.getElementById('overlayMessage');
     overlay.textContent = msg;
     overlay.style.display = 'flex';
+    overlay.dataset.active = '1';
   }
-  hideMessage() { document.getElementById('overlayMessage').style.display = 'none'; }
+
+  hideMessage() {
+    const overlay = document.getElementById('overlayMessage');
+    overlay.style.display = 'none';
+    delete overlay.dataset.active;
+  }
 
   toggle_cell(mouseX, mouseY) {
     let chosen = null, bestD2 = Infinity;
@@ -517,6 +523,16 @@ class App {
 
       if (this.board.toggle_cell(x, y)) this.redraw();
     });
+
+    // Global click *capture*: if overlay is visible, hide it and swallow the click.
+    document.addEventListener('click', (ev) => {
+      const overlay = document.getElementById('overlayMessage');
+      if (overlay?.dataset.active === '1') {
+        this.board.hideMessage();
+        ev.stopPropagation();
+        ev.preventDefault();
+      }
+    }, true); // capture phase so we run before any other handlers
 
     window.addEventListener('keydown', (ev) => this.on_key(ev), { passive: false });
 
